--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html
+<html>
   <head>
     <title>My first webpage!</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    Hello, world!
-    Welcome to my first webpage!
+    <h1>My First webpage</h1>
+    <h2>Written with a little guidance from Moringa</h2>
+    
+    <p>Hello, world</p>
+    <p> Welcome to my <strong>first web page</strong>!</p>
+    
+    <p>Here are some things I'm going to learn about coding</p>
+    <ol>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Javascript</li>
+      <li>And a lot more!</li>
+    </ol>
+    <p>Check out <a href="http;/morangischool.com/">Moringa School.</a>It's a great place to learn web development.</p>
+    <p>Here is a link to my <a href="favorite-things.html">favorite things.</a></p>
+    <img width="500" src="Images/elephant.jpg" alt="A photo of an elephant">
   </body>
 </html>
