--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li>Javascript</li>
       <li>And a lot more!</li>
     </ol>
-    <p>Check out <a href="http;/morangischool.com/">Moringa School.</a>It's a great place to learn web development.</p>
+    <p>Check out <a href="http:/moringaschool.com/">Moringa School.</a>It's a great place to learn web development.</p>
     <p>Here is a link to my <a href="favorite-things.html">favorite things.</a></p>
     <img width="500" src="Images/elephant.jpg" alt="A photo of an elephant">
   </body>
